HV-1628 Remove more calls deprecated by JDK 10